style: fixed issue when region dropdown wasn't showing up, because of not having z-index set properly.(plus updated background color to white)

--- a/src/pages/listings-home/components/styles/filters.options.module.css
+++ b/src/pages/listings-home/components/styles/filters.options.module.css
@@ -7,7 +7,7 @@
 }
 
 
-.regionsWrapper{
+.regionsWrapper {
     display: flex;
     flex-direction: column;
     align-items: start;
@@ -24,18 +24,22 @@
         border: 1px solid var(--border-color);
         position: absolute;
         top: 50px;
+        background-color: white;
+        z-index: 99;
 
         & .mappedRegions {
             display: grid;
             grid-template-columns: repeat(3, 200px);
             gap: 10px;
+
             & .eachRegion {
                 display: flex;
                 gap: 5px;
                 align-items: center;
             }
 
-            & div /* button wrapper to let it float on the right side of the parent element*/{
+            & div /* button wrapper to let it float on the right side of the parent element */
+            {
                 width: 100%;
             }
         }
